# SAVER

./: .gitignore  ANONYMITY_CHECKLIST.md  README.md  pyproject.toml  requirements.txt
configs/: alphaedit_counterfact_llama31_500.json  alphaedit_counterfact_qwen25_500.json  alphaedit_counterfact_qwen25_500_contradictory.json  alphaedit_counterfact_qwen25_500_fixedbeta.json  alphaedit_counterfact_qwen25_500_fullsample.json  alphaedit_counterfact_qwen25_500_noproxy.json  alphaedit_counterfact_qwen25_500_overlap.json  alphaedit_counterfact_qwen25_500_phase_shift.json  alphaedit_counterfact_qwen25_500_sparse_oracle.json  alphaedit_zsre_llama31_500.json  alphaedit_zsre_qwen25_500.json  alphaedit_zsre_qwen25_500_fixedq.json  alphaedit_zsre_qwen25_500_fullsample.json  memit_counterfact_llama31_500.json  memit_zsre_llama31_500.json  memit_zsre_qwen25_500.json  rome_zsre_qwen25_500.json  ultraedit_counterfact_llama31_500.json  ultraedit_counterfact_qwen25_500.json  ultraedit_zsre_qwen25_500.json  wise_counterfact_llama31_500.json  wise_counterfact_qwen25_500.json
configs/ablations/: alphaedit_counterfact_qwen25_500_fixedq.json  alphaedit_zsre_qwen25_500_fixedbeta.json  alphaedit_zsre_qwen25_500_noproxy.json
configs/examples/: memit_example.json  (+1 more)
data/: README.md  counterfact_mini.jsonl  ppl_reference_mini.txt
docs/: reproduce.md
scripts/: check_environment.py  download_hf_dataset.py  download_hf_model.py  generate_rq4_stress_streams.py  prepare_edit_dataset.py  run_checkpoint_metrics.py  run_example.py  run_representation_drift.py  run_sequential_editing.py
(+34 files in other folders)
